# hse_cuda_course_public

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  submit.py
00-hello-world/: CMakeLists.txt  README.md  hello_world.cuh  task.json  test.cu
01-fibonacci/: CMakeLists.txt  README.md  fibonacci.cuh  task.json  test.cu
02-binary-image/: CMakeLists.txt  README.md  benchmark.cu  binary_image.cu  binary_image.cuh  task.json  test.cu
03-tree/: CMakeLists.txt  README.md  benchmark.cu  task.json  test.cu  tree.cu  tree.cuh
04-vector/: CMakeLists.txt  README.md  benchmark.cu  task.json  test.cu  vector.cuh
05-transpose/: CMakeLists.txt  README.md  benchmark.cu  test.cu  transpose.cu  transpose.cuh
06-gemm-v0/: CMakeLists.txt  README.md  benchmark.cu  gemm.cu  gemm.cuh  test.cu
07-prefsums/: CMakeLists.txt  README.md  benchmark.cu  prefsum.cuh  test.cu
deadlines/: hse.yml
docs/: setup.md  troubleshooting.md
infra/: patch-from-private.py
tools/: CMakeLists.txt
tools/cmake/: FindCatch.cmake  TestSolution.cmake
tools/stb_image/: CMakeLists.txt
tools/util/: CMakeLists.txt
tools/util/include/: cuda_helpers.h
tools/util/src/: cuda_helpers.cpp
